# Mosaique

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: plot.py  run.py
docs/plans/: 2026-02-21-benchmark-redesign-design.md  2026-02-21-benchmark-redesign.md  2026-02-21-config-interface-design.md  2026-02-21-config-interface.md  2026-02-21-epoch-batching-design.md  2026-02-21-epoch-batching.md  2026-03-04-feature-validation-design.md  2026-03-04-feature-validation-part1.md  2026-03-04-feature-validation-part1.md.tasks.json  2026-03-04-feature-validation-part2.md  2026-03-04-feature-validation-part2.md.tasks.json  2026-03-04-feature-validation.md  2026-03-04-remove-networkx-design.md  2026-03-04-remove-networkx.md  2026-03-04-remove-networkx.md.tasks.json
script/: benchmark.py  benchmark_plots.py  feature_extraction.py  feature_extraction_mne.py  features_config.yaml
src/mosaique/: __init__.py
src/mosaique/config/: __init__.py  loader.py  types.py
src/mosaique/extraction/: __init__.py  eegdata.py  extractor.py
src/mosaique/extraction/transforms/: __init__.py  base.py  connectivity.py  simple.py  tfdecomposition.py
src/mosaique/features/: __init__.py  connectivity.py  graph_metrics.py  registry.py  timefrequency.py  univariate.py
src/mosaique/utils/: __init__.py  eeg_helpers.py  toolkit.py
tests/: conftest.py  test_config.py  test_extractor.py  test_features.py  test_registry.py  test_registry_completeness.py  test_univariate.py
