[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mosaique"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "polars",
    "pydantic>=2",
    "PyWavelets",
    "scipy",
    "pathos",
    "rich",
    "pyyaml",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
mne = ["mne", "mne-connectivity"]

[dependency-groups]
dev = [
    "psutil",
    "ruff",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
